@@ -3,359 +3,330 @@ package de.pse.oys.service;
 import de.pse.oys.domain.FreeTime;
 import de.pse.oys.domain.LearningPlan;
 import de.pse.oys.domain.LearningUnit;
-import de.pse.oys.domain.RecurringFreeTime;
-import de.pse.oys.domain.SingleFreeTime;
-import de.pse.oys.domain.Task;
-import de.pse.oys.domain.User;
-import de.pse.oys.domain.enums.RecurrenceType;
 import de.pse.oys.dto.FreeTimeDTO;
 import de.pse.oys.dto.UnitDTO;
 import de.pse.oys.dto.response.LearningPlanDTO;
 import de.pse.oys.persistence.LearningPlanRepository;
-import de.pse.oys.persistence.LearningUnitRepository;
-import de.pse.oys.persistence.UserRepository;
+import de.pse.oys.persistence.TaskRepository;
+import de.pse.oys.service.exception.AccessDeniedException;
+import de.pse.oys.service.exception.ResourceNotFoundException;
+import de.pse.oys.service.exception.ValidationException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
-import java.time.temporal.ChronoUnit;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 /**
- * Service für Änderungen an bestehenden Lerneinheiten.
- *
- * @author uqvfm
- * @version 1.0
+ * LearningUnitService kapselt die Geschäftslogik für Änderungen an Lerneinheiten innerhalb eines Lernplans.
+ * <p>
+ * Kernaufgaben:
+ * <ul>
+ *   <li>Ownership/Scope: Laden des Plans ausschließlich im User-Scope (planid + userid).</li>
+ *   <li>Validierung: Zeiträume müssen logisch sein (start < end) und dürfen keine Überschneidungen erzeugen.</li>
+ *   <li>Persistierung: Änderungen erfolgen am Plan/Units und werden über das LearningPlanRepository gespeichert.</li>
+ *   <li>Response: Gibt den aktualisierten Gesamtplan als LearningPlanDTO zurück.</li>
+ * </ul>
+ * </p>
  */
 @Service
 @Transactional
 public class LearningUnitService {
 
-    private static final int HOURS_PER_DAY = 24;
-    private static final int MINUTES_PER_HOUR = 60;
+    private static final String MSG_REQUIRED_FIELDS_MISSING = "Pflichtfelder fehlen.";
+    private static final String MSG_INVALID_RANGE = "Die Startzeit muss vor der Endzeit liegen.";
+    private static final String MSG_PLAN_NOT_FOUND = "LearningPlan existiert nicht.";
+    private static final String MSG_UNIT_NOT_FOUND = "LearningUnit existiert nicht.";
+    private static final String MSG_ACCESS_DENIED = "Kein Zugriff auf die angefragte Ressource.";
+    private static final String MSG_ACTUAL_DURATION_INVALID = "Die tatsächliche Dauer muss >= 0 sein.";
+    private static final String MSG_OVERLAP = "Die Einheit überschneidet sich zeitlich mit einer anderen Einheit im Plan.";
 
-    private static final int SLOT_LENGTH_MINUTES = 5;
-    private static final int SLOTS_PER_DAY = HOURS_PER_DAY * MINUTES_PER_HOUR / SLOT_LENGTH_MINUTES; // 288 Slots à 5 Minuten
-    private static final int DAY_OF_WEEK_VALUE_MONDAY = 1; // Monday=1 ... Sunday=7
-
-    private static final String MSG_DTO_NULL = "dto must not be null";
-    private static final String MSG_ACTUAL_DURATION_NEGATIVE = "actualDuration must be >= 0";
-    private static final String MSG_START_TIME_NULL_CANNOT_FINISH_EARLY = "Cannot finish unit early: startTime is null";
-
-    private static final String MSG_USER_NOT_FOUND_TEMPLATE = "User not found: %s";
-    private static final String MSG_PLAN_NOT_FOUND_TEMPLATE = "LearningPlan not found: %s";
-    private static final String MSG_UNIT_NOT_FOUND_TEMPLATE = "LearningUnit not found: %s";
-
-    private static final String MSG_UNIT_NOT_IN_PLAN_TEMPLATE =
-            "LearningUnit %s is not part of LearningPlan %s";
-
-    private static final String MSG_START_END_NULL = "start and end must not be null";
-    private static final String MSG_END_NOT_AFTER_START = "end must be after start";
-
-    private final UserRepository userRepository;
     private final LearningPlanRepository learningPlanRepository;
-    private final LearningUnitRepository learningUnitRepository;
+    private final TaskRepository taskRepository;
 
-    public LearningUnitService(UserRepository userRepository,
-                               LearningPlanRepository learningPlanRepository,
-                               LearningUnitRepository learningUnitRepository) {
-        this.userRepository = userRepository;
-        this.learningPlanRepository = learningPlanRepository;
-        this.learningUnitRepository = learningUnitRepository;
+    /**
+     * Erzeugt den Service.
+     *
+     * @param learningPlanRepository Repository für LearningPlan-Zugriffe (inkl. Ownership-Scoping)
+     * @param taskRepository         Repository für Tasks (derzeit nicht zwingend genutzt; reserviert für Metadaten-Mapping)
+     */
+    public LearningUnitService(LearningPlanRepository learningPlanRepository,
+                               TaskRepository taskRepository) {
+        this.learningPlanRepository = Objects.requireNonNull(learningPlanRepository);
+        this.taskRepository = Objects.requireNonNull(taskRepository);
     }
 
     /**
-     * Aktualisiert eine bestehende Lerneinheit anhand eines {@link UnitDTO}.
+     * Aktualisiert eine spezifische Lerneinheit innerhalb eines Lernplans.
+     * <p>
+     * Aktuell werden zuverlässig die Zeitdaten synchronisiert (date/start/end).
+     * Weitere Metadaten aus {@link UnitDTO} (title/description/color) werden NICHT persistiert,
+     * da diese in {@link LearningUnit} nicht modelliert sind.
+     * </p>
      *
-     * <p>Das DTO ist die Kalenderdarstellung im Frontend. Für die Domäne werden daraus
-     * vor allem Datum/Start/Ende übernommen. Optional wird auch der Titel der zugrundeliegenden
-     * Aufgabe aktualisiert.</p>
-     *
-     * @param userId die ID des Nutzers
-     * @param planId die ID des Lernplans (Woche), in dem die Einheit liegt
-     * @param unitId die ID der zu ändernden Lerneinheit
-     * @param dto    neue Kalenderdaten
-     * @return der aktualisierte Lernplan als DTO
-     * @throws IllegalArgumentException wenn User/Plan/Unit nicht existieren oder nicht zusammengehören
+     * @param userId ID des Users (Scope/Ownership)
+     * @param planId ID des Lernplans
+     * @param unitId ID der Lerneinheit
+     * @param dto    neue Werte (insb. date/start/end)
+     * @return aktualisierter Lernplan zur Client-Synchronisation
      */
     public LearningPlanDTO updateLearningUnit(UUID userId, UUID planId, UUID unitId, UnitDTO dto) {
-        Objects.requireNonNull(dto, MSG_DTO_NULL);
-
-        User user = requireUser(userId);
-        LearningPlan plan = requirePlanOfUser(user, planId);
-        LearningUnit unit = requireUnit(unitId);
-
-        requireUnitInPlan(plan, unit);
-
-        // Zeitfenster aktualisieren (nur wenn Datum + Start + Ende gesetzt sind)
-        if (dto.getDate() != null && dto.getStart() != null && dto.getEnd() != null) {
-            LocalDateTime start = LocalDateTime.of(dto.getDate(), dto.getStart());
-            LocalDateTime end = LocalDateTime.of(dto.getDate(), dto.getEnd());
-            validateTimeRange(start, end);
-            unit.setStartTime(start);
-            unit.setEndTime(end);
+        if (userId == null || planId == null || unitId == null || dto == null) {
+            throw new ValidationException(MSG_REQUIRED_FIELDS_MISSING);
         }
 
-        // Titeländerung wirkt fachlich auf die Aufgabe (nicht auf die Unit selbst).
-        if (dto.getTitle() != null && unit.getTask() != null && !dto.getTitle().isBlank()) {
-            unit.getTask().setTitle(dto.getTitle());
+        LearningPlan plan = loadPlanForUserOrThrow(userId, planId);
+        LearningUnit unit = findUnitOrThrow(plan, unitId);
+
+        // Metadaten wie title/description/color existieren nicht in LearningUnit
+        // TODO: Klären, ob diese Daten aus Task kommen und hier sauber gemappt/persistiert werden sollen.
+
+        LocalDate date = dto.getDate();
+        LocalTime start = dto.getStart();
+        LocalTime end = dto.getEnd();
+
+        if (date != null && start != null && end != null) {
+            LocalDateTime newStart = LocalDateTime.of(date, start);
+            LocalDateTime newEnd = LocalDateTime.of(date, end);
+            moveUnitInternal(plan, unit, newStart, newEnd, true);
         }
 
-        learningUnitRepository.save(unit);
-        return mapToLearningPlanDTO(plan, user);
+        learningPlanRepository.save(plan);
+        return toDto(plan);
     }
 
     /**
-     * Verschiebt eine Lerneinheit manuell (z. B. Drag-and-Drop im Kalender).
+     * Verschiebt eine Lerneinheit manuell auf einen neuen Zeitraum (z.B. Drag-and-Drop).
+     * <p>
+     * Zusätzlich erwähnt das Entwurfsheft ein Persistenz-Flag zum Schutz vor Solver-Überschreibungen.
+     * </p>
      *
-     * @param userId die ID des Nutzers
-     * @param planId die ID des Lernplans
-     * @param unitId die ID der zu verschiebenden Einheit
+     * @param userId ID des Users (Scope/Ownership)
+     * @param planId ID des Lernplans
+     * @param unitId ID der Lerneinheit
      * @param start  neuer Startzeitpunkt
-     * @param end    neues Ende
-     * @return der aktualisierte Lernplan als DTO
-     * @throws IllegalArgumentException wenn User/Plan/Unit nicht existieren oder nicht zusammengehören
+     * @param end    neuer Endzeitpunkt
+     * @return aktualisierter Lernplan zur Client-Synchronisation
      */
-    public LearningPlanDTO moveLearningUnitManually(UUID userId,
-                                                    UUID planId,
-                                                    UUID unitId,
-                                                    LocalDateTime start,
-                                                    LocalDateTime end) {
-        User user = requireUser(userId);
-        LearningPlan plan = requirePlanOfUser(user, planId);
-        LearningUnit unit = requireUnit(unitId);
+    public LearningPlanDTO moveLearningUnitManually(UUID userId, UUID planId, UUID unitId,
+                                                    LocalDateTime start, LocalDateTime end) {
+        if (userId == null || planId == null || unitId == null || start == null || end == null) {
+            throw new ValidationException(MSG_REQUIRED_FIELDS_MISSING);
+        }
 
-        requireUnitInPlan(plan, unit);
-        validateTimeRange(start, end);
+        LearningPlan plan = loadPlanForUserOrThrow(userId, planId);
+        LearningUnit unit = findUnitOrThrow(plan, unitId);
+
+        moveUnitInternal(plan, unit, start, end, true);
+
+        learningPlanRepository.save(plan);
+        return toDto(plan);
+    }
+
+    /**
+     * Markiert eine Lerneinheit vorzeitig als abgeschlossen und speichert die tatsächliche Dauer.
+     *
+     * @param userId         ID des Users (Scope/Ownership)
+     * @param planId         ID des Lernplans
+     * @param unitId         ID der Lerneinheit
+     * @param actualDuration tatsächlich aufgewendete Zeit in Minuten (>= 0)
+     * @return aktualisierter Lernplan zur Client-Synchronisation
+     */
+    public LearningPlanDTO finishUnitEarly(UUID userId, UUID planId, UUID unitId, Integer actualDuration) {
+        if (userId == null || planId == null || unitId == null || actualDuration == null) {
+            throw new ValidationException(MSG_REQUIRED_FIELDS_MISSING);
+        }
+        if (actualDuration < 0) {
+            throw new ValidationException(MSG_ACTUAL_DURATION_INVALID);
+        }
+
+        LearningPlan plan = loadPlanForUserOrThrow(userId, planId);
+        LearningUnit unit = findUnitOrThrow(plan, unitId);
+
+        unit.markAsCompletedEarly(actualDuration);
+
+        learningPlanRepository.save(plan);
+        return toDto(plan);
+    }
+
+    // -------------------------------------------------------------------------
+    // internals
+    // -------------------------------------------------------------------------
+
+    /**
+     * Lädt den Lernplan im User-Scope (Ownership inklusive).
+     * <p>
+     * Wenn kein Plan zurückkommt, ist entweder der Plan nicht vorhanden ODER gehört nicht dem User.
+     * Damit keine Informationen geleakt werden, wird in beiden Fällen AccessDenied geworfen.
+     * </p>
+     *
+     * @param userId User-Scope
+     * @param planId Plan-ID
+     * @return LearningPlan im User-Scope
+     */
+    private LearningPlan loadPlanForUserOrThrow(UUID userId, UUID planId) {
+        return learningPlanRepository.findByIdAndUserId(planId, userId)
+                .orElseThrow(() -> new AccessDeniedException(MSG_ACCESS_DENIED));
+    }
+
+    /**
+     * Findet eine Lerneinheit innerhalb des Plans.
+     *
+     * @param plan   Lernplan
+     * @param unitId ID der Einheit
+     * @return gefundene Einheit
+     */
+    private LearningUnit findUnitOrThrow(LearningPlan plan, UUID unitId) {
+        List<LearningUnit> units = plan.getUnits();
+        if (units == null || units.isEmpty()) {
+            throw new ResourceNotFoundException(MSG_UNIT_NOT_FOUND);
+        }
+
+        return units.stream()
+                .filter(u -> u != null && unitId.equals(u.getUnitId()))
+                .findFirst()
+                .orElseThrow(() -> new ResourceNotFoundException(MSG_UNIT_NOT_FOUND));
+    }
+
+    /**
+     * Setzt neue Zeiten für eine Unit, validiert den Zeitraum und optional Überschneidungen.
+     *
+     * @param plan        Lernplan (für Overlap-Check)
+     * @param unit        zu ändernde Unit
+     * @param start       neuer Start
+     * @param end         neues Ende
+     * @param checkOverlap true, wenn Überschneidungen geprüft werden sollen
+     */
+    private void moveUnitInternal(LearningPlan plan, LearningUnit unit,
+                                  LocalDateTime start, LocalDateTime end,
+                                  boolean checkOverlap) {
+        if (!start.isBefore(end)) {
+            throw new ValidationException(MSG_INVALID_RANGE);
+        }
+
+        if (checkOverlap) {
+            assertNoOverlap(plan, unit, start, end);
+        }
 
         unit.setStartTime(start);
         unit.setEndTime(end);
-        learningUnitRepository.save(unit);
-
-        return mapToLearningPlanDTO(plan, user);
     }
 
     /**
-     * Markiert eine Lerneinheit als vorzeitig abgeschlossen und speichert die tatsächliche Dauer.
+     * Prüft, ob das neue Zeitfenster einer Unit mit anderen Units im Plan kollidiert.
      *
-     * <p>Wenn {@code actualDuration} nicht mitgegeben wird, ermittelt der Server die Dauer
-     * aus der Differenz zwischen Startzeitpunkt der Einheit und dem aktuellen Zeitpunkt.</p>
-     *
-     * @param userId         die ID des Nutzers
-     * @param planId         die ID des Lernplans
-     * @param unitId         die ID der Einheit
-     * @param actualDuration tatsächliche Dauer in Minuten (optional)
-     * @return der aktualisierte Lernplan als DTO
-     * @throws IllegalArgumentException wenn User/Plan/Unit nicht existieren oder nicht zusammengehören
+     * @param plan     Lernplan
+     * @param target   Ziel-Unit (wird bei der Prüfung ignoriert)
+     * @param newStart neuer Start
+     * @param newEnd   neues Ende
      */
-    public LearningPlanDTO finishUnitEarly(UUID userId,
-                                           UUID planId,
-                                           UUID unitId,
-                                           Integer actualDuration) {
-        User user = requireUser(userId);
-        LearningPlan plan = requirePlanOfUser(user, planId);
-        LearningUnit unit = requireUnit(unitId);
-
-        requireUnitInPlan(plan, unit);
-
-        int minutes;
-        if (actualDuration != null) {
-            if (actualDuration < 0) {
-                throw new IllegalArgumentException(MSG_ACTUAL_DURATION_NEGATIVE);
-            }
-            minutes = actualDuration;
-        } else {
-            LocalDateTime start = unit.getStartTime();
-            if (start == null) {
-                throw new IllegalArgumentException(MSG_START_TIME_NULL_CANNOT_FINISH_EARLY);
-            }
-            LocalDateTime now = LocalDateTime.now();
-            long diff = java.time.Duration.between(start, now).toMinutes();
-            minutes = (int) Math.max(0, diff);
+    private void assertNoOverlap(LearningPlan plan, LearningUnit target,
+                                 LocalDateTime newStart, LocalDateTime newEnd) {
+        List<LearningUnit> units = plan.getUnits();
+        if (units == null || units.isEmpty()) {
+            return;
         }
 
-        unit.markAsCompletedEarly(minutes);
-        learningUnitRepository.save(unit);
+        for (LearningUnit other : units) {
+            if (other == null || other.getUnitId() == null) {
+                continue;
+            }
+            if (other.getUnitId().equals(target.getUnitId())) {
+                continue;
+            }
 
-        return mapToLearningPlanDTO(plan, user);
-    }
-
-    // -------------------------------------------------------------------------
-    // Laden / Validieren
-    // -------------------------------------------------------------------------
-
-    private User requireUser(UUID userId) {
-        return userRepository.findById(userId)
-                .orElseThrow(() -> new IllegalArgumentException(String.format(MSG_USER_NOT_FOUND_TEMPLATE, userId)));
+            boolean overlap = newStart.isBefore(other.getEndTime()) && newEnd.isAfter(other.getStartTime());
+            if (overlap) {
+                throw new ValidationException(MSG_OVERLAP);
+            }
+        }
     }
 
     /**
-     * Lädt einen Lernplan und stellt sicher, dass er dem Nutzer zugeordnet ist.
+     * Mappt einen {@link LearningPlan} auf das Response-DTO {@link LearningPlanDTO}.
      *
-     * <p>Primär wird über {@code user.getLearningPlans()} geprüft. Falls die Beziehung in einem
-     * frühen Integrationsstand noch nicht befüllt ist, wird ersatzweise direkt über das Repository
-     * geladen.</p>
+     * @param plan Lernplan
+     * @return DTO für das Frontend
      */
-    private LearningPlan requirePlanOfUser(User user, UUID planId) {
-        for (LearningPlan p : safeList(user.getLearningPlans())) {
-            if (planId.equals(p.getPlanId())) {
-                return p;
-            }
-        }
-
-        return learningPlanRepository.findById(planId)
-                .orElseThrow(() -> new IllegalArgumentException(String.format(MSG_PLAN_NOT_FOUND_TEMPLATE, planId)));
-    }
-
-    private LearningUnit requireUnit(UUID unitId) {
-        return learningUnitRepository.findById(unitId)
-                .orElseThrow(() -> new IllegalArgumentException(String.format(MSG_UNIT_NOT_FOUND_TEMPLATE, unitId)));
-    }
-
-    private void requireUnitInPlan(LearningPlan plan, LearningUnit unit) {
-        boolean contained = safeList(plan.getUnits()).stream()
-                .anyMatch(u -> unit.getUnitId().equals(u.getUnitId()));
-        if (!contained) {
-            throw new IllegalArgumentException(String.format(
-                    MSG_UNIT_NOT_IN_PLAN_TEMPLATE, unit.getUnitId(), plan.getPlanId()));
-        }
-    }
-
-    private void validateTimeRange(LocalDateTime start, LocalDateTime end) {
-        if (start == null || end == null) {
-            throw new IllegalArgumentException(MSG_START_END_NULL);
-        }
-        if (!end.isAfter(start)) {
-            throw new IllegalArgumentException(MSG_END_NOT_AFTER_START);
-        }
-    }
-
-    // -------------------------------------------------------------------------
-    // Mapping: Domain -> DTO (LearningPlanDTO)
-    // -------------------------------------------------------------------------
-
-    private LearningPlanDTO mapToLearningPlanDTO(LearningPlan plan, User user) {
+    private LearningPlanDTO toDto(LearningPlan plan) {
         LearningPlanDTO dto = new LearningPlanDTO();
         dto.setId(plan.getPlanId());
         dto.setValidFrom(plan.getWeekStart());
         dto.setValidUntil(plan.getWeekEnd());
-        dto.setUnits(mapUnits(plan));
-        dto.setAvailableSlots(mapFreeTimesForWeek(user, plan.getWeekStart(), plan.getWeekEnd()));
+        dto.setUnits(mapUnits(plan.getUnits()));
+        dto.setAvailableSlots(mapFreeTimes(plan.getFreeTimes()));
         return dto;
     }
 
-    private List<UnitDTO> mapUnits(LearningPlan plan) {
-        List<UnitDTO> result = new ArrayList<>();
-
-        for (LearningUnit unit : safeList(plan.getUnits())) {
-            if (unit.getStartTime() == null || unit.getEndTime() == null) {
-                continue;
-            }
-
-            Task task = unit.getTask();
-
-            String title = task != null ? task.getTitle() : null;
-            String description = null;
-            String color = null;
-
-            if (task != null && task.getModule() != null) {
-                description = firstNonBlank(task.getModule().getDescription(), task.getModule().getTitle());
-                color = task.getModule().getColorHexCode();
-            }
-
-            UnitDTO ud = new UnitDTO();
-            ud.setTitle(title);
-            ud.setDescription(description);
-            ud.setColor(color);
-            ud.setDate(unit.getStartTime().toLocalDate());
-            ud.setStart(unit.getStartTime().toLocalTime());
-            ud.setEnd(unit.getEndTime().toLocalTime());
-
-            result.add(ud);
+    /**
+     * Mappt die Units des Plans auf {@link UnitDTO}.
+     * <p>
+     * Aktuell werden date/start/end sauber gesetzt.
+     * </p>
+     *
+     * @param units Liste von LearningUnits
+     * @return Liste von UnitDTOs (nie null)
+     */
+    private List<UnitDTO> mapUnits(List<LearningUnit> units) {
+        if (units == null) {
+            return List.of();
         }
 
-        return result;
+        return units.stream()
+                .filter(Objects::nonNull)
+                .map(this::mapUnit)
+                .collect(Collectors.toList());
     }
 
     /**
-     * Mappt die Freizeitblöcke eines Nutzers auf Slot-basierte DTOs.
+     * Mappt eine einzelne {@link LearningUnit} auf {@link UnitDTO}.
      *
-     * <p>Die Slot-Zählung beginnt am Wochenstart (00:00) und nutzt 5-Minuten-Slots.
-     * Pro Tag gibt es {@link #SLOTS_PER_DAY} Slots.</p>
+     * @param unit LearningUnit
+     * @return UnitDTO
      */
-    private List<FreeTimeDTO> mapFreeTimesForWeek(User user, LocalDate weekStart, LocalDate weekEnd) {
-        if (weekStart == null || weekEnd == null) {
-            return Collections.emptyList();
+    private UnitDTO mapUnit(LearningUnit unit) {
+        UnitDTO dto = new UnitDTO();
+
+        // TODO: title/description/color:
+        // - vermutlich aus unit.getTask() ableitbar (z.B. task.title, task.description, module.color, ...)
+        // - erst umsetzen, wenn klar ist, welche Felder existieren und welche Quelle "kanonisch" ist
+
+        if (unit.getStartTime() != null) {
+            dto.setDate(unit.getStartTime().toLocalDate());
+            dto.setStart(unit.getStartTime().toLocalTime());
         }
-
-        List<FreeTimeDTO> dtos = new ArrayList<>();
-
-        for (FreeTime ft : safeList(user.getFreeTimes())) {
-            if (ft == null || ft.getStartTime() == null || ft.getEndTime() == null || !ft.isValidTimeRange()) {
-                continue;
-            }
-
-            Integer dayIndex = resolveDayIndex(ft, weekStart, weekEnd);
-            if (dayIndex == null) {
-                continue;
-            }
-
-            boolean weekly = ft.getRecurrenceType() == RecurrenceType.WEEKLY;
-            LocalDate date = weekStart.plusDays(dayIndex);
-
-            dtos.add(new FreeTimeDTO(
-                    ft.getFreeTimeId(),
-                    ft.getTitle(),
-                    date,
-                    ft.getStartTime(),
-                    ft.getEndTime(),
-                    weekly
-            ));
-        }
-
-        return dtos;
-    }
-
-    private Integer resolveDayIndex(FreeTime ft, LocalDate weekStart, LocalDate weekEnd) {
-        RecurrenceType type = ft.getRecurrenceType();
-
-        if (type == RecurrenceType.WEEKLY && ft instanceof RecurringFreeTime weekly) {
-            return weekly.getDayOfWeek().getValue() - DAY_OF_WEEK_VALUE_MONDAY;
-        }
-
-        if (type == RecurrenceType.ONCE && ft instanceof SingleFreeTime once) {
-            LocalDate date = once.getDate();
-            if (date != null && !date.isBefore(weekStart) && !date.isAfter(weekEnd)) {
-                return (int) ChronoUnit.DAYS.between(weekStart, date);
+        if (unit.getEndTime() != null) {
+            dto.setEnd(unit.getEndTime().toLocalTime());
+            if (dto.getDate() == null) {
+                dto.setDate(unit.getEndTime().toLocalDate());
             }
         }
 
-        return null;
+        return dto;
     }
 
-    private int mapTimeToSlot(LocalTime time) {
-        if (time == null) {
-            return 0;
+    /**
+     * Mappt FreeTimes auf {@link FreeTimeDTO}.
+     * <p>
+     * {@link LearningPlan#getFreeTimes()} ist bei euch {@code @Transient} und wird oft dynamisch berechnet.
+     * Ohne eure bestehende Mapping-Logik aus dem FreeTime-Kontext wird hier nichts erraten.
+     * </p>
+     *
+     * @param freeTimes Liste von FreeTime (kann null sein)
+     * @return Liste von FreeTimeDTOs (nie null)
+     */
+    private List<FreeTimeDTO> mapFreeTimes(List<FreeTime> freeTimes) {
+        if (freeTimes == null || freeTimes.isEmpty()) {
+            return List.of();
         }
-        int totalMinutes = time.getHour() * MINUTES_PER_HOUR + time.getMinute();
-        return totalMinutes / SLOT_LENGTH_MINUTES;
-    }
 
-    private String firstNonBlank(String preferred, String fallback) {
-        if (preferred != null && !preferred.isBlank()) {
-            return preferred;
-        }
-        return fallback;
-    }
-
-    private <T> List<T> safeList(List<T> in) {
-        return in == null ? Collections.emptyList() : in;
+        // TODO: sobald ihr eine definierte Mapping-Quelle habt (Mapper/Factory/DTO-Constructor),
+        //       hier implementieren. Bis dahin lieber leer als falsch.
+        return List.of();
     }
 }
-
